--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.13.3",
     "html-entities": "^1.2.0",
     "json-bigint": "^0.2.0",
+    "mongodb": "^2.2.26",
     "request": "^2.73.0",
     "uuid": "^3.0.1"
   },
