--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-entities": "^1.2.0",
     "json-bigint": "^0.2.0",
     "mongodb": "^2.2.26",
+    "node-geocoder": "^3.16.0",
     "request": "^2.73.0",
     "uuid": "^3.0.1"
   },
