--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.3",
     "html-entities": "^1.2.0",
     "json-bigint": "^0.2.0",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.26",
     "node-geocoder": "^3.16.0",
     "request": "^2.73.0",
